# RPiPico-Holonome2023

./: APDS_9960.c  APDS_9960.h  Asser_Moteurs.c  Asser_Moteurs.h  Asser_Position.c  Asser_Position.h  CMakeLists.txt  Commande_vitesse.c  Commande_vitesse.h  Geometrie.h  Geometrie_robot.h  Holonome2023.c  LICENSE  Localisation.c  Localisation.h  Moteurs.c  Moteurs.h  QEI.c  QEI.h  Readme.md  Robot_config.c  Robot_config.h  Servomoteur.c  Servomoteur.h  Temps.c  Temps.h  Test.c  Test.h  Trajectoire.c  Trajectoire.h  Trajectoire_bezier.c  Trajectoire_bezier.h  Trajectoire_circulaire.c  Trajectoire_circulaire.h  Trajectoire_droite.c  Trajectoire_droite.h  Trajet.c  Trajet.h  acq_5ms_env_50ms.csv  acq_5ms_env_50ms_enr_01.csv  (+28 more)
data/: acq_5ms_env_50ms_enr_03.csv  acq_5ms_env_50ms_enr_04.csv  acq_ADXRS453_5ms_filtre_0_001_enr02.csv  acq_ADXRS453_5ms_filtre_0_2_enr04.csv  acq_ADXRS453_5ms_filtre_0_2_enr05.csv  acq_ADXRS453_5ms_no_filter_enr01.csv  acq_ADXRS453_5ms_no_filter_enr02.csv  acq_ADXRS453_angle_continu_enr01.csv  acq_ADXRS453_angle_continu_enr05.csv  acq_ADXRS453_angle_enr03.csv  acq_ADXRS453_angle_enr05.csv  acq_ADXRS453_angle_enr06.csv  graph_ADXRS453_enr02.gp  graph_ADXRS453_enr03.gp  graph_ADXRS453_enr04.gp  graph_enr01.gp  graph_enr02.gp  graph_enr03.gp  multi_calb.csv  multi_calb_1.csv  test.csv
